<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Chill Weather</string>
    <string name="dialog_error_message">There was a connection error. Please try again!</string>
    <string name="ok">OK</string>
    <string name="network_is_unavailable">Network unavailable!</string>
    <string name="rain_snow">RAIN/SNOW?</string>
    <string name="humidity">HUMIDITY</string>
    <string name="refresh_image" translatable="false">refresh image</string>
    <string name="need_multiple_permissions">Need Permission</string>
    <string name="this_app_needs_location_permission">This app needs location permission.</string>
    <string name="grant">Grant</string>
    <string name="cancel">Cancel</string>
    <string name="hourly">HOURLY</string>
    <string name="there_is_no_data_to_display">There is no data to display</string>
    <string name="update_weather_data">Update Weather</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="o_clock"/>
    <string name="pref_header_general">Colors</string>
    <string name="pref_header_about">About</string>
    <string name="title_activity_about">About Chill Weather</string>
    <string name="this_app_was_built_by"><![CDATA[
    Chill Weather was developed by Stefan Josch. I appreciate suggestions, criticism and comments:
    <a href="mailto:stefan.joesch@joesch-it.de">e-mail</a>. The source code can be accessed on
    <a href="https://github.com/badelectron77/ChillWeather">GitHub</a>. Visit my
    <a href="https://joesch-it.de/">Website</a>!
    ]]></string>
    <string name="open_with">Open with</string>
    <string name="version">Version</string>
    <string name="libraries_list" translatable="false"><![CDATA[
    <a href="https://jakewharton.github.io/butterknife/">ButterKnife</a>,
    <a href="https://github.com/google/gson">google-gson</a>,
    <a href="http://square.github.io/okhttp/">OkHttp</a>
    ]]></string>
    <string name="icons_list"><![CDATA[
    Weather Icons made by <a href="http://www.freepik.com/">Freepik</a> from
    <a href="http://www.flaticon.com/">Flaticon</a>.
    Launcher Icon made by <a href="http://www.flaticon.com/authors/maxim-basinski/">Maxim Basinski</a>
    from <a href="http://www.flaticon.com/">Flaticon</a>.
    ]]></string>
    <string name="used_libs">Used libraries:</string>
    <string name="used_icons">Used icons:</string>
    <string name="dummy_text_short" translatable="false">Lorem ipsum dolor sit amet, consetetur sadipscing
        elitr, sed diam nonumy eirmod tempor invidunt ut labore.</string>
    <string name="dummy_text_medium" translatable="false">Lorem ipsum dolor sit amet, consetetur
        sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
        erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita
        kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_colored_icons">Colored icons</string>
    <string name="pref_description_colored_icons">Use colored weather icons instead of monochrome icons</string>

    <string name="pref_title_photo_background">Photo Background</string>
    <string name="pref_description_photo_background">Use photo background instead of colored background in current view</string>

    <string name="pref_title_temperature_colored_background">Temperature-dependent colors</string>
    <string name="pref_description_temperature_colored_background">Use temperature-dependent colors for backgrounds</string>

    <string name="pref_header_data_sync">Sync</string>

    <string name="pref_title_app_theme">App Theme</string>
    <string-array name="pref_app_theme_titles">
        <item>Transparent</item>
        <item>Blue</item>
        <item>Orange</item>
    </string-array>
    <string-array name="pref_app_theme_values">
        <item>2</item>
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="pref_title_autorefresh_frequency">Refresh weather data every…</string>
    <string-array name="pref_autorefresh_frequency_titles">
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
    </string-array>
    <string-array name="pref_autorefresh_frequency_values">
        <item>1</item>
        <item>3</item>
        <item>6</item>
        <item>12</item>
        <item>24</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_widget_transparency">Widget transparency</string>
    <string-array name="pref_widget_transparency_titles">
        <item>0 &#65285;</item>
        <item>10 &#65285;</item>
        <item>20 &#65285;</item>
        <item>30 &#65285;</item>
        <item>40 &#65285;</item>
        <item>50 &#65285;</item>
        <item>60 &#65285;</item>
        <item>70 &#65285;</item>
        <item>80 &#65285;</item>
        <item>90 &#65285;</item>
        <item>100 &#65285;</item>
    </string-array>
    <string-array name="pref_widget_transparency_values">
        <item>0</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
    </string-array>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_autorefresh_weather_switch">Auto-refresh weather data</string>
    <string name="pref_description_autorefresh_weather_switch">Automatically refresh weather data in specific intervals</string>
    <string name="used_weather_service">Used weather service:</string>
    <string name="weather_service_list" translatable="false"><![CDATA[
    <a href="https://darksky.net/poweredby/">Dark Sky</a>
    ]]></string>
    <string name="no_location_available">no place available</string>
    <string name="degree" translatable="false">°</string>
    <string name="searching">Searching…</string>
    <string name="updated">Upd.</string>
    <string name="loading">Loading…</string>
    <string name="pref_header_widgets">Widget</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="please_reload">Please reload!</string>
    <string name="use_gps">Use GPS</string>
    <string name="location_enabled">This app needs your net based coarse location, no GPS. Location is disabled on your device.</string>
    <string name="no_location_detected">No location detected</string>
    <string name="location_settings">Settings</string>

</resources>
