<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/hourlyIcon"
        android:icon="@drawable/ic_action_access_time"
        android:title="@string/hourly"
        app:showAsAction="always"/>

    <item
        android:id="@+id/refreshMenuIcon"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/update_weather_data"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/settings"
        android:title="@string/title_activity_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/about"
        android:title="@string/pref_header_about"
        app:showAsAction="never"/>

    <item
        android:id="@+id/rateThisApp"
        android:title="@string/rate_this_app"
        app:showAsAction="never"/>

</menu>