<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_autorefresh_weather_switch"
        android:summary="@string/pref_description_autorefresh_weather_switch"
        android:title="@string/pref_title_autorefresh_weather_switch"/>

    <ListPreference
        android:defaultValue="3"
        android:entries="@array/pref_autorefresh_frequency_titles"
        android:entryValues="@array/pref_autorefresh_frequency_values"
        android:key="autorefresh_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:dependency="pref_autorefresh_weather_switch"
        android:title="@string/pref_title_autorefresh_frequency"/>

</PreferenceScreen>
