<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/location_date_linear_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/locationLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:drawableLeft="@drawable/ic_location_on"
                    android:drawableStart="@drawable/ic_location_on"
                    android:fontFamily="sans-serif-light"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:paddingEnd="4dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="4dp"
                    android:paddingStart="0dp"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    tools:text="Koblenz"/>

                <TextView
                    android:id="@+id/timeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/white"
                    tools:text="Akt. Montag, 26. Juni 17:30"/>

            </LinearLayout>

            <TextView
                android:id="@+id/temperatureLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:includeFontPadding="false"
                android:paddingTop="30dp"
                android:textColor="@android:color/white"
                android:textSize="150sp"
                android:visibility="invisible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location_date_linear_layout"
                tools:text="24"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/degreeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:includeFontPadding="false"
                android:paddingTop="30dp"
                android:text="@string/degree"
                android:textColor="@android:color/white"
                android:textSize="100sp"
                android:visibility="invisible"
                app:layout_constraintLeft_toRightOf="@+id/temperatureLabel"
                app:layout_constraintTop_toTopOf="@+id/temperatureLabel"
                tools:visibility="visible"/>

            <ImageView
                android:id="@+id/iconImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/app_name"
                android:cropToPadding="true"
                android:visibility="invisible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/temperatureLabel"
                app:srcCompat="@drawable/clear_day_01"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/summaryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-light"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingStart="8dp"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iconImageView"
                tools:text="Leicht bewölkt"/>

            <LinearLayout
                android:id="@+id/humidity_rain_linear_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/temperatureLabel"
                android:layout_marginTop="4dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:visibility="invisible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/summaryLabel"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/humidityLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/humidity"
                        android:textColor="#80ffffff"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/humidityValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:textColor="@android:color/white"
                        android:textSize="24sp"
                        tools:text="56 %"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/precipLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/rain_snow"
                        android:textColor="#80ffffff"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/precipValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:textColor="@android:color/white"
                        android:textSize="24sp"
                        tools:text="22 %"/>
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/darkskyImageView"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:visibility="invisible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/humidity_rain_linear_layout"
                app:srcCompat="@drawable/poweredbydarksky02"
                tools:visibility="visible"/>

            <ImageView
                android:id="@+id/splashImageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="195dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/splash_screen"
                tools:visibility="invisible"/>

            <TextView
                android:id="@+id/networkIsUnavailable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:fontFamily="sans-serif-light"
                android:padding="16dp"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:visibility="invisible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="invisible"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/dailyListRecyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:paddingTop="4dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/darkskyImageView"
                tools:listitem="@layout/daily_list_item"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.v4.widget.SwipeRefreshLayout>